// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/mandrillapp SendEmail when all inputs are correct sends email with attachments 1`] = `
Ok {
  "value": Object {
    "messageId": "6e66d342d89c45bf8bc0d645b0aec56d",
  },
}
`;

exports[`communication/send-email/mandrillapp SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "cbc9fa542d5d413b8577022e90b7a5ae",
  },
}
`;

exports[`communication/send-email/mandrillapp when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "MappedHTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Validation error: {\\\\\\"message\\\\\\":{\\\\\\"from_email\\\\\\":\\\\\\"An email address must contain a single @\\\\\\"}}\\"
}
AST Path: definitions[0].statements[5].responseHandlers[1].statements[1]
Original Map Location: Line 77, column 7",
}
`;
